--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "@types/jest": "^29.5.14",
         "@wocker/core": "^1.0.21",
         "jest": "^29.7.0",
+        "make-coverage-badge": "^1.2.0",
         "ts-jest": "^29.3.2",
         "ts-node": "^10.9.2",
         "typescript": "^5.8.3"
