--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@wocker/testing",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "author": "Kris Papercut <krispcut@gmail.com>",
     "description": "Docker workspace for web projects (testing)",
     "license": "MIT",
@@ -35,6 +35,7 @@
         "@types/jest": "^29.5.14",
         "@wocker/core": "^1.0.21",
         "jest": "^29.7.0",
+        "make-coverage-badge": "^1.2.0",
         "ts-jest": "^29.3.2",
         "ts-node": "^10.9.2",
         "typescript": "^5.8.3"
