--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -3,6 +3,7 @@
     "exclude": [
         "node_modules",
         "lib",
+        "test",
         "**/*test.ts",
         "**/*spec.ts",
         "**/*e2e-spec.ts"
