--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "@wocker/testing",
-    "version": "1.0.2",
+    "type": "commonjs",
+    "version": "1.0.3",
     "author": "Kris Papercut <krispcut@gmail.com>",
     "description": "Docker workspace for web projects (testing)",
     "license": "MIT",
@@ -29,21 +30,21 @@
         "make-coverage-badge": "make-coverage-badge"
     },
     "peerDependencies": {
-        "@wocker/core": "^1.0.24",
+        "@wocker/core": "^1.0.25",
         "docker-modem": "^5.0.6",
         "dockerode": "^4.0.7"
     },
     "devDependencies": {
-        "@types/jest": "^29.5.14",
-        "@wocker/core": "^1.0.24",
+        "@types/jest": "^30.0.0",
+        "@wocker/core": "^1.0.25",
         "docker-modem": "*",
         "dockerode": "*",
-        "jest": "^29.7.0",
+        "jest": "^30.1.3",
         "make-coverage-badge": "^1.2.0",
         "memfs": "^4.17.2",
-        "ts-jest": "^29.3.2",
+        "ts-jest": "^29.4.4",
         "ts-node": "^10.9.2",
-        "typescript": "^5.8.3",
+        "typescript": "^5.9.2",
         "unionfs": "^4.5.4"
     }
 }
