--- a/.github/workflows/publish-beta.yml
+++ b/.github/workflows/publish-beta.yml
@@ -30,7 +30,15 @@ jobs:
                 registry-url: 'https://registry.npmjs.org'
 
           - name: Setup beta version
-            uses: ./.github/actions/beta-version
+            uses: kearisp/npm-version-action@v0.0.2
+            with:
+                tag: beta
+
+          - name: Setup @wocker/core beta version
+            uses: kearisp/npm-setup-deps-action@v0.0.7
+            with:
+                package: "@wocker/core"
+                tag: "beta"
 
           - name: Cache dependencies
             uses: actions/cache@v4
